<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".components.activities.ServiceActivity">

    <Button
        android:id="@+id/btnStartService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="@string/str_start"
        app:layout_constraintEnd_toStartOf="@+id/tvStartedService"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStartedService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_started_service"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/btnStartService"
        app:layout_constraintEnd_toStartOf="@id/btnStopService"
        app:layout_constraintStart_toEndOf="@id/btnStartService" />

    <Button
        android:id="@+id/btnStopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_stop"
        app:layout_constraintBaseline_toBaselineOf="@id/btnStartService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvStartedService"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStartBoundService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/str_start"
        app:layout_constraintEnd_toStartOf="@+id/tvBoundService"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStartService" />

    <TextView
        android:id="@+id/tvBoundService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_bounded_service"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/btnStartBoundService"
        app:layout_constraintEnd_toStartOf="@id/btnStopBoundService"
        app:layout_constraintStart_toEndOf="@id/btnStartBoundService" />

    <Button
        android:id="@+id/btnStopBoundService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_stop"
        app:layout_constraintBaseline_toBaselineOf="@id/btnStartBoundService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvBoundService"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFetchData4mBound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/str_fetch_data_4m_bound"
        app:layout_constraintEnd_toEndOf="@id/btnStopBoundService"
        app:layout_constraintStart_toStartOf="@id/btnStartBoundService"
        app:layout_constraintTop_toBottomOf="@id/btnStartBoundService" />

</androidx.constraintlayout.widget.ConstraintLayout>